[gd_scene load_steps=4 format=3 uid="uid://dbdd01owjm1xd"]

[ext_resource type="Script" path="res://ui/item_option.gd" id="1_7ec6g"]
[ext_resource type="Texture2D" uid="uid://3ipfvu4u7381" path="res://assets/textures/icons/black_hole_icon.png" id="2_jqcrp"]
[ext_resource type="FontFile" uid="uid://d4a3w6dx63g5p" path="res://assets/fonts/Planes_ValMore.ttf" id="3_0mr8k"]

[node name="ItemOption" type="ColorRect"]
custom_minimum_size = Vector2(160, 50)
offset_right = 180.0
offset_bottom = 60.0
color = Color(0.466667, 0.466667, 0.466667, 1)
script = ExtResource("1_7ec6g")

[node name="ItemIcon" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 38.0
offset_bottom = 37.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_jqcrp")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 5.0
offset_right = 119.0
offset_bottom = 21.0
theme_override_fonts/font = ExtResource("3_0mr8k")
theme_override_font_sizes/font_size = 13
text = "Name"

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 7.0
offset_right = 173.0
offset_bottom = 19.0
theme_override_fonts/font = ExtResource("3_0mr8k")
theme_override_font_sizes/font_size = 12
text = "Level: 1"

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 26.0
offset_right = 177.0
offset_bottom = 44.0
theme_override_fonts/font = ExtResource("3_0mr8k")
theme_override_font_sizes/font_size = 10
text = "Description"
autowrap_mode = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 38.0
offset_bottom = 37.0
scale = Vector2(0.6, 0.6)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
